filling in the blanks

--- a/QIQO.Business.Accounts.Api/Properties/launchSettings.json
+++ b/QIQO.Business.Accounts.Api/Properties/launchSettings.json
@@ -1,6 +1,6 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false,
+    "windowsAuthentication": true,
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:24863/",
@@ -10,16 +10,14 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/account",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "QIQO.Business.Accounts.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "api/account",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
