--- a/QIQO.Business.Accounts.Api/QIQO.Business.Accounts.Api.csproj
+++ b/QIQO.Business.Accounts.Api/QIQO.Business.Accounts.Api.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Controllers\" />
+    <Folder Include="Properties\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
