building up infra

--- a/QIQO.Business.Accounts.Api/QIQO.Business.Accounts.Api.csproj
+++ b/QIQO.Business.Accounts.Api/QIQO.Business.Accounts.Api.csproj
@@ -19,5 +19,8 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QIQO.Business.Accounts.Data\QIQO.Business.Accounts.Data.csproj" />
+  </ItemGroup>
 
 </Project>
