--- a/QIQO.Business.Accounts.Api/QIQO.Business.Accounts.Api.csproj
+++ b/QIQO.Business.Accounts.Api/QIQO.Business.Accounts.Api.csproj
@@ -20,7 +20,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\QIQO.Business.Accounts.Data\QIQO.Business.Accounts.Data.csproj" />
+    <ProjectReference Include="..\QIQO.Business.Accounts.Proxies\QIQO.Business.Accounts.Proxies.csproj" />
+    <ProjectReference Include="..\QIQO.Business.Core\QIQO.Business.Core.csproj" />
   </ItemGroup>
 
 </Project>
