--- a/QIQO.Business.Accounts.Api/Dockerfile
+++ b/QIQO.Business.Accounts.Api/Dockerfile
@@ -1,10 +1,9 @@
-FROM microsoft/aspnetcore:2.0 AS base
+FROM microsoft/dotnet:2.1-aspnetcore-runtime AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM microsoft/aspnetcore-build:2.0 AS build
+FROM microsoft/dotnet:2.1-sdk AS build
 WORKDIR /src
-COPY *.sln ./
 COPY QIQO.Business.Accounts.Api/QIQO.Business.Accounts.Api.csproj QIQO.Business.Accounts.Api/
 COPY QIQO.Business.Accounts.Proxies/QIQO.Business.Accounts.Proxies.csproj QIQO.Business.Accounts.Proxies/
 COPY QIQO.Business.Accounts.Data/QIQO.Business.Accounts.Data.csproj QIQO.Business.Accounts.Data/
@@ -12,10 +11,10 @@ COPY QIQO.Business.Core/QIQO.Business.Core.csproj QIQO.Business.Core/
 RUN dotnet restore
 COPY . .
 WORKDIR /src/QIQO.Business.Accounts.Api
-RUN dotnet build -c Release -o /app
+RUN dotnet build QIQO.Business.Accounts.Api.csproj -c Release -o /app
 
 FROM build AS publish
-RUN dotnet publish -c Release -o /app
+RUN dotnet publish QIQO.Business.Accounts.Api.csproj -c Release -o /app
 
 FROM base AS final
 WORKDIR /app
